Fix comment scroll on mobile

--- a/ui/scss/component/_card.scss
+++ b/ui/scss/component/_card.scss
@@ -11,7 +11,7 @@
   margin-bottom: var(--spacing-m);
 
   @media (max-width: $breakpoint-small) {
-    // overflow-y: scroll;
+    overflow-y: scroll;
     height: 100%;
     border-top: 1px solid var(--color-border);
     // background-color:var(--color-background);
